hero section up and link sections functional

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>G.Jen Portfolio</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" href=".\Portfolio\CSS\assets\reset.css">
-  <link rel="stylesheet" type="text/css" href=".\Portfolio\CSS\assets\style.css" />
+  <link rel="stylesheet" type="text/css" href="reset.css">
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
@@ -41,7 +41,7 @@
     </section>
 <!--Contact Information Section-->
     <section id="contact">
-        <h1>Reach me at</h1>
+        <h1>Reach me at:</h1>
     </section>
 </main>
 
