updated a lot of main content added a photo of myself and placeholder photos for my work display section

--- a/index.html
+++ b/index.html
@@ -36,11 +36,41 @@
     <div class="container" id="about">
         <h1>About Me</h1>
         <p>ex-mail carrier that never wants to dirve agian.</p>
+        <img class="photo" src="https://scontent-atl3-2.xx.fbcdn.net/v/t1.18169-9/11695956_1584935755104571_5587353118299867686_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=174925&_nc_ohc=CScamV2muXUAX8ILvt1&tn=vfjmeZFG3LqML8Qj&_nc_ht=scontent-atl3-2.xx&oh=00_AT8ySYKmv-hX5OMY3nd58GFRmkjXE7PHTIBulRIRzeUuuQ&oe=624E17BD">
     </div>
+
 <!--Sample Projects Section-->
 
     <div class="container" id="projects">
         <h1>Sample Work</h1>
+
+        <main class="grid">
+            <section class="card">
+              <header>to be announced...</header>
+              <img src="https://images.unsplash.com/photo-1604857864317-b3f0bff0b9a0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80" alt="white cap mushroom" />
+            </section>
+            <section class="card">
+              <header>to be announced...</header>
+              <img src="https://images.unsplash.com/photo-1505820013142-f86a3439c5b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80" alt="red mushroom with white spots" />
+            </section>
+            <section class="card">
+              <header>to be announced...</header>
+              <img src="https://images.unsplash.com/photo-1600177781554-45c3d6d21896?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="purple mushroom in the woods" />
+            </section>
+            <section class="card">
+              <header>to be announced...</header>
+              <img src="https://images.unsplash.com/photo-1489798375127-d57bd9d0b348?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjJ8fGJsdWUlMjBtdXNocm9vbXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="a white and pale yellow jellyfish that looks like a mushroom" />
+            </section>
+            <section class="card">
+              <header>to be announced...</header>
+              <img src="https://images.unsplash.com/photo-1600606281534-a84eedec0c5c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="pink ball shaped mushroom growing on a log" />
+            </section>
+            <section class="card">
+              <header>to be announced...</header>
+              <img src="https://images.unsplash.com/photo-1514293068685-cd091c89d982?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="squiggly top yellow mushroom" />
+            </section>
+          </main>
+
     </div>
 
 <!--Contact Information Section-->
