updated the read me file and made a few tweeks to the contact section

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <!--navigation bar/ liinks to other sections of the page-->
     <header>
         <nav>
-            <a href="#About">About</a>
+          <ul>
+           <a href="#About">About</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
+          </ul>
         </nav>
     </header>
 
@@ -34,9 +36,9 @@
 <main>
 
     <div class="container" id="about">
-        <h1>About Me</h1>
-        <p id="float1">ex-mail carrier that never wants to dirve agian.</p>
-        <img class="photo" src="https://scontent-atl3-2.xx.fbcdn.net/v/t1.18169-9/11695956_1584935755104571_5587353118299867686_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=174925&_nc_ohc=CScamV2muXUAX8ILvt1&tn=vfjmeZFG3LqML8Qj&_nc_ht=scontent-atl3-2.xx&oh=00_AT8ySYKmv-hX5OMY3nd58GFRmkjXE7PHTIBulRIRzeUuuQ&oe=624E17BD">
+        <h1>Hi! I'm Gretchen</h1>
+        <p id="float1">I am currently a student in a Georgia Tech bootcamp program learning to code. I know html and I am familiar with CSS. I am currently learning java script, so stay tuned.</p>
+        <img class="photo" src="https://scontent-atl3-2.xx.fbcdn.net/v/t39.30808-6/275840989_3010109699253829_123185627050152814_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=730e14&_nc_ohc=XTrTLSrqluMAX-wSrHy&_nc_oc=AQn75FoJa4hY8e9ZObDX-2fq3kkIcYwxeOvBAtEtr0JO54EskU6wmv5IWiSZC7A5PEw&_nc_ht=scontent-atl3-2.xx&oh=00_AT9XZmm-x8EfJGeg-j71in3kRBPSVSuwLr_AyHmnQ3EiQg&oe=62356964">
     </div>
 
 <!--Sample Projects Section-->
@@ -94,7 +96,7 @@
                  <p>follow me on <a id="linked" href="https://www.linkedin.com/in/gretchen-jensen-23721415a/">LinkedIn</a>
                 </p>
 
-                <p>check out more of my work on <a id="git" href="https://github.com/gretchesketch">GitHub</a>
+                <p>check out more of my work on <a id="git" href="https://github.com/gretchesketch"><img src="https://pngimg.com/uploads/github/github_PNG20.png"></a>
                 </p>
         </menu>
     </div>
