added grow affect to images and icons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
           <ul>
-           <a href="#About">About</a>
+           <a href="#about">About</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
           </ul>
@@ -37,8 +37,8 @@
 
     <div class="container" id="about">
         <h1>Hi! I'm Gretchen</h1>
-        <p id="float1">I am currently a student in a Georgia Tech bootcamp program learning to code. I know html and I am familiar with CSS. I am currently learning java script, so stay tuned.</p>
         <img class="photo" src="https://scontent-atl3-2.xx.fbcdn.net/v/t39.30808-6/275840989_3010109699253829_123185627050152814_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=730e14&_nc_ohc=XTrTLSrqluMAX-wSrHy&_nc_oc=AQn75FoJa4hY8e9ZObDX-2fq3kkIcYwxeOvBAtEtr0JO54EskU6wmv5IWiSZC7A5PEw&_nc_ht=scontent-atl3-2.xx&oh=00_AT9XZmm-x8EfJGeg-j71in3kRBPSVSuwLr_AyHmnQ3EiQg&oe=62356964">
+        <p id="float1">I am currently a student in a Georgia Tech bootcamp program learning to code. I know html and I am familiar with CSS. I am currently learning JavaScript, so stay tuned.</p>
     </div>
 
 <!--Sample Projects Section-->
@@ -81,7 +81,7 @@
             <h1>Reach me at:</h1>
                  
             <!--formsubmit.com email form-->
-            <form id="contact" action="https://formsubmit.co/gretchenjensen92@gmail.com" method="post">
+            <form id="contact1" action="https://formsubmit.co/gretchenjensen92@gmail.com" method="post">
                 <input type="text" placeholder="Your Name Here" name="name" required>
 
                 <input type="email" name="email" placeholder="Your Email Here" required>
@@ -93,10 +93,10 @@
                     <input type="submit"/>  
             </form>
                  
-                 <p>follow me on <a id="linked" href="https://www.linkedin.com/in/gretchen-jensen-23721415a/">LinkedIn</a>
+                 <p>follow me on <a id="linked" href="https://www.linkedin.com/in/gretchen-jensen-23721415a/"><img id="linkedin" src="http://assets.stickpng.com/images/58e91afdeb97430e81906504.png"></a>
                 </p>
 
-                <p>check out more of my work on <a id="git" href="https://github.com/gretchesketch"><img src="https://pngimg.com/uploads/github/github_PNG20.png"></a>
+                <p>check out more of my work on <a id="git" href="https://github.com/gretchesketch"><img id="git" src="https://pngimg.com/uploads/github/github_PNG20.png"></a>
                 </p>
         </menu>
     </div>
