added links and images to my portfolio sample work section

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
     <div class="container" id="about">
         <h1>Hi! I'm Gretchen</h1>
-        <img class="photo" src="https://scontent-atl3-2.xx.fbcdn.net/v/t39.30808-6/275840989_3010109699253829_123185627050152814_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=730e14&_nc_ohc=XTrTLSrqluMAX-wSrHy&_nc_oc=AQn75FoJa4hY8e9ZObDX-2fq3kkIcYwxeOvBAtEtr0JO54EskU6wmv5IWiSZC7A5PEw&_nc_ht=scontent-atl3-2.xx&oh=00_AT9XZmm-x8EfJGeg-j71in3kRBPSVSuwLr_AyHmnQ3EiQg&oe=62356964" alt="photo of Gretchen in front of yellow flowers">
-        <p id="float1">I am currently a student in a Georgia Tech bootcamp program learning to code. I know html and I am familiar with CSS. I am currently learning JavaScript, so stay tuned.</p>
+        <img class="photo" src="images\headshot.jpg" alt="photo of Gretchen in front of yellow flowers">
+        <div><p id="float1">I am currently a student in a Georgia Tech bootcamp program learning to code. I know html and I am familiar with CSS. I am currently learning JavaScript, so stay tuned.</p></div>
     </div>
 
 <!--Sample Projects Section-->
@@ -48,8 +48,16 @@
 
         <main class="grid">
             <section class="card">
-              <header>coming soon...</header>
-              <img src="https://images.unsplash.com/photo-1604857864317-b3f0bff0b9a0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80" alt="white cap mushroom" />
+              <header>GitCocktail</header>
+              <a href="https://gretchesketch.github.io/project1_Cocktail-Recipe/"><img src="images\project1screenshot.jpg" alt="GitCocktail screen shot of landing page" /></a>
+            </section>
+            <section class="card">
+              <header>Futurama Quiz</header>
+              <a href="https://gretchesketch.github.io/quiz-app/"></a><img src="images\FuturamaQuizApp-screenshot.jpg" alt="Quiz App screenshot" />
+            </section>
+            <section class="card">
+              <header>Password Generater</header>
+              <a href="https://gretchesketch.github.io/HW_3_Password-Generater/"><img src="images\passwordGeneraterScreenshot.jpg" alt="password generater screenshot" /></a>
             </section>
             <section class="card">
               <header>coming soon...</header>
@@ -57,19 +65,11 @@
             </section>
             <section class="card">
               <header>coming soon...</header>
-              <img src="https://images.unsplash.com/photo-1600177781554-45c3d6d21896?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="purple mushroom in the woods" />
-            </section>
-            <section class="card">
-              <header>coming soon...</header>
-              <img src="https://images.unsplash.com/photo-1489798375127-d57bd9d0b348?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjJ8fGJsdWUlMjBtdXNocm9vbXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="a white and pale yellow jellyfish that looks like a mushroom" />
-            </section>
-            <section class="card">
-              <header>coming soon...</header>
               <img src="https://images.unsplash.com/photo-1600606281534-a84eedec0c5c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="pink ball shaped mushroom growing on a log" />
             </section>
             <section class="card">
               <header>coming soon...</header>
-              <img src="https://images.unsplash.com/photo-1514293068685-cd091c89d982?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="squiggly top yellow mushroom" />
+              <img src="https://images.unsplash.com/photo-1600177781554-45c3d6d21896?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="purple mushroom in the woods" />
             </section>
           </main>
 
@@ -79,19 +79,6 @@
     <div class="container" id="contact">
         <menu>
             <h1>Reach me at:</h1>
-                 
-            <!--formsubmit.com email form-->
-            <form id="contact1" action="https://formsubmit.co/gretchenjensen92@gmail.com" method="post">
-                <input type="text" placeholder="Your Name Here" name="name" required>
-
-                <input type="email" name="email" placeholder="Your Email Here" required>
-
-                <input type="subject" name="subject" placeholder="Your Message Here" required>
-                <input type="hidden" name="_subject" value="NEW Submission!">
-
-                <form method="POST" action="pages/thankyou.html">  
-                    <input type="submit"/>  
-            </form>
                  
                  <p>follow me on <a id="linked" href="https://www.linkedin.com/in/gretchen-jensen-23721415a/"><img id="linkedin" src="http://assets.stickpng.com/images/58e91afdeb97430e81906504.png" alt="Linked In logo"></a>
                 </p>
@@ -105,7 +92,7 @@
 <!--website details-->
 <footer>
   <h2>created by Gretchen Jensen</h2>
-  <h3>last updated March of 2022</h3>
+  <h3>last updated April of 2022</h3>
 </footer>
 
 </body>
