added resume link and icon into rech me section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 
                 <p>check out more of my work on <a id="git" href="https://github.com/gretchesketch"><img id="git" src="https://pngimg.com/uploads/github/github_PNG20.png" alt="GitHub logo"></a>
                 </p>
+
+                <p>Click here to view my resume: <a id="resume" href="https://docs.google.com/document/d/1O0r-hnZrf5fAD47lnSsMICZ1r6Iab3-jtdzvCiiaEdw/edit?usp=sharing"><img id="resume" src="https://clipartart.com/images/resume-icons-clipart-7.jpg" alt="GitHub logo"></a>
+                </p>
         </menu>
     </div>
 </main>
