added new about me and project 2

--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
     <div class="container" id="about">
         <h1>Hi! I'm Gretchen</h1>
         <img class="photo" src="images\headshot.jpg" alt="photo of Gretchen in front of yellow flowers">
-        <div><p id="float1">I am currently a student in a Georgia Tech bootcamp program learning to code. I know html and I am familiar with CSS. I am currently learning JavaScript, so stay tuned.</p></div>
+        <pre id="float1">              Casual hello. I’m Gretchen, and at 29 decided to change my career path. With an interest in technology, I am attending a bootcamp through Georgia Tech. 
+          In my pursuit of coding knowledge, I have worked with many languages, libraries, frameworks, and been introduced to tons of new coding concepts. The biggest take 
+          away however is that I will never run out of reading material. Good thing I love reading.I have worked in both a group and on my own to complete assignments using 
+          HTML, CSS, Javascript, Node.js, express, API’s (both server and client side), bootstrap, MySQL, inquirer, handlebars, etc. I have 
+          used both Github and Heroku to host 
+          my apps and have a familiarity with Git. I am not done though and am thrilled to continue growing and utilizing current and 
+          future coding practices.
+        </pre>
     </div>
 
 <!--Sample Projects Section-->
@@ -60,8 +67,8 @@
               <a href="https://gretchesketch.github.io/HW_3_Password-Generater/"><img src="images\passwordGeneraterScreenshot.jpg" alt="password generater screenshot" /></a>
             </section>
             <section class="card">
-              <header>coming soon...</header>
-              <img src="https://images.unsplash.com/photo-1505820013142-f86a3439c5b2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80" alt="red mushroom with white spots" />
+              <header>DOOD: video game forum</header>
+              <a href="https://glacial-badlands-86135.herokuapp.com/"><img src="images\login.jpg" alt="video game forum" /></a>
             </section>
             <section class="card">
               <header>coming soon...</header>
@@ -95,7 +102,7 @@
 <!--website details-->
 <footer>
   <h2>created by Gretchen Jensen</h2>
-  <h3>last updated April of 2022</h3>
+  <h3>last updated <script>document.write(new Date().getFullYear());</script></h3>
 </footer>
 
 </body>
