--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <h1 class="hero-title">
             Gretchen Jensen
         </h1>
-        <h2 class="hero-subtitle">
+        <!-- <h2 class="hero-subtitle">
             Rising Webdeveloper.
-        </h2>
+        </h2> -->
     </section>
 
 <!--About me Section-->
