--- a/index.html
+++ b/index.html
@@ -1,4 +1,34 @@
-<!DOCTYPE html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--orginal portfolio-->
+
+<!-- <!DOCTYPE html>
 <html>
 
 <head>
@@ -10,7 +40,7 @@
 </head>
 
 <body>
-<!--navigation bar/ liinks to other sections of the page-->
+navigation bar/ liinks to other sections of the page
     <header>
         <nav>
           <ul>
@@ -22,17 +52,23 @@
     </header>
 
 <!--Hero Image Section-->
-    <section class="hero">
+    <!-- <section class="hero">
         <sub class="hero-content"></sub>
         <h1 class="hero-title">
             Gretchen Jensen
         </h1>
-        <!-- <h2 class="hero-subtitle">
+        <h2 class="hero-subtitle">
             Rising Webdeveloper.
-        </h2> -->
+        </h2>
     </section>
 
-<!--About me Section-->
+
+    <div class="header">
+      <h1>Header</h1>
+      <p>My supercool header</p>
+    </div>
+
+About me Section
 <main>
 
     <div class="container" id="about">
@@ -48,7 +84,7 @@
         </pre>
     </div>
 
-<!--Sample Projects Section-->
+Sample Projects Section
 
     <div class="container" id="projects">
         <h1>Sample Work</h1>
@@ -82,7 +118,7 @@
 
     </div>
 
-<!--Contact Information Section-->
+Contact Information Section
     <div class="container" id="contact">
         <menu>
             <h1>Reach me at:</h1>
@@ -99,7 +135,31 @@
     </div>
 </main>
 
-<!--website details-->
+<div class="container">
+  <div style="text-align:center">
+    <h2>Contact Us</h2>
+    <p>Swing by for a cup of coffee, or leave us a message:</p>
+  </div>
+  <div class="row">
+    <div class="column">
+      <img src="/w3images/map.jpg" style="width:100%">
+    </div>
+    <div class="column">
+      <form action="/action_page.php">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <label for="country">Country</label>
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+</div>
+
+website details
 <footer>
   <h2>created by Gretchen Jensen</h2>
   <h3>last updated <script>document.write(new Date().getFullYear());</script></h3>
@@ -107,4 +167,4 @@
 
 </body>
 
-</html>
+</html> -->
