--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>United States emissions broken down by state for the years 2018 and 2019</b></h5>
-
+          <h5 class="w3-opacity"><b>United States emissions broken by state for the years 2018 and 2019</b></h5>
+          <div class='tableauPlaceholder' id='viz1663016856395' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;RT&#47;RTMCWKBBC&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;RTMCWKBBC' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;RT&#47;RTMCWKBBC&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>    <script type='text/javascript'>     var divElement = document.getElementById('viz1663016856395');         var vizElement = divElement.getElementsByTagName('object')[0];              vizElement.style.width='640px';vizElement.style.height='640px';      var scriptElement = document.createElement('script');         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';          vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
           <p>Visual display of Emissions data and each states contributing industries.</p><br>
         </div>
       </div>
