--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Data Analyst</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Raleigh, North Carolina</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Norfolk, Virginia</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>gretchenjensen92@gmail.com</p>
           <p><i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="https://github.com/gretchesketch">Github</a></p>
           <p><i class="glyphicon glyphicon-user fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="www.linkedin.com/in/gretchesketch">LinkedIn</a></p>
@@ -95,7 +95,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>GitCocktail</b></h5>
         
-          <p><a href="https://gretchesketch.github.io/project1_Cocktail-Recipe/"><img src="images\project1screenshot.jpg" alt="GitCocktail screenshot"></a>>A simple app using local storage to save cocktail recipes using server-side API calls.</p>
+          <p><a href="https://gretchesketch.github.io/project1_Cocktail-Recipe/"><img src="images\project1screenshot.jpg" alt="GitCocktail screenshot"></a>A simple app using local storage to save cocktail recipes using server-side API calls.</p>
           <hr>
         </div>
         <div class="w3-container">
@@ -105,19 +105,20 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>United States emissions broken by state for the years 2018 and 2019</b></h5>
-          <div class='tableauPlaceholder' id='viz1663021391349' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USAstateEmissions2018-2019&#47;percentageofthewhole&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='USAstateEmissions2018-2019&#47;percentageofthewhole' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;US&#47;USAstateEmissions2018-2019&#47;percentageofthewhole&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>   <script type='text/javascript'>  var divElement = document.getElementById('viz1663021391349');  var vizElement = divElement.getElementsByTagName('object')[0];    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';    var scriptElement = document.createElement('script');    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';    vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
-          <p>Visual display of Emissions data and each states contributing industries.</p><br>
+          <h5 class="w3-opacity"><b>United States emissions</b></h5>
+          
+          <p><a href="https://public.tableau.com/views/Finalemissions/final?:language=en-US&:display_count=n&:origin=viz_share_link"><img src="images\1-1.jpg" alt="Smoke Stack image placeholder"></a>Visual display through Tableau of Emissions data and each states contributing industries.</p>
+          <hr>
         </div>
       </div>
 
       <div class="w3-container w3-card w3-white">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
-        <div class="w3-container">
+        <!-- <div class="w3-container">
           <h5 class="w3-opacity"><b>New Apprenticeship</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug. 2022 - Current</h6>
-          <p>Certified Data Analyst</p><br>
-        </div>
+          <p>Data Analyst</p><br>
+        </div> -->
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Georgia Tech Bootcamp</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb. 2022 - Aug. 2022</h6>
@@ -143,7 +144,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Created and maintained by Gretchen Jensen</p>
-  <p>last updated September 2022</p>
+  <p>last updated October 2022</p>
 </footer>
 
 </body>
